--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dkakfpolz/image/upload/v1731146691/AB_qjdna2.png" />
+    <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/abeventsdev.appspot.com/o/AB.png?alt=media&token=15eb34e1-18f5-4fa5-8d67-c82d23e5d6ab" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sri Kalki Events</title>
   </head>
